--- a/index.html
+++ b/index.html
@@ -5,27 +5,67 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Trigger-Warnung — Vorsicht Bildmaterial</title>
 <style>
-  body{font-family:sans-serif;background:#111;color:#eee;display:flex;align-items:center;justify-content:center;min-height:100vh;margin:0}
-  .card{background:#222;padding:20px;border-radius:10px;max-width:800px;text-align:center}
-  h1{color:#f87171}
-  button{padding:10px 16px;margin:8px;border:0;border-radius:6px;cursor:pointer;font-weight:bold}
+  html,body{
+    margin:0;
+    padding:0;
+    height:100%;
+    width:100%;
+    background:#000;
+    color:#fff;
+    font-family:sans-serif;
+  }
+  .center{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    height:100%;
+    text-align:center;
+    padding:20px;
+  }
+  .card{
+    background:#111;
+    padding:24px;
+    border-radius:12px;
+    max-width:700px;
+  }
+  h1{color:#f87171;margin-top:0}
+  button{
+    padding:10px 16px;
+    margin:10px;
+    border:0;
+    border-radius:8px;
+    font-weight:bold;
+    cursor:pointer;
+  }
   .btn-danger{background:#dc2626;color:#fff}
   .btn-primary{background:#16a34a;color:#fff}
-  img{max-width:100%;height:auto;border-radius:8px;margin-top:15px}
+  #imageFull{
+    display:none;
+    width:100%;
+    height:100%;
+  }
+  #imageFull img{
+    object-fit:contain;
+    width:100%;
+    height:100%;
+  }
 </style>
 </head>
 <body>
-  <div class="card">
-    <h1>⚠️ Trigger-Warnung</h1>
-    <p>Das folgende Bild kann verstörend wirken (Leichen sichtbar).<br>
-    Möchtest du es wirklich sehen?</p>
-    <div>
-      <button class="btn-danger" onclick="closePage()">Nein — Seite schließen</button>
-      <button class="btn-primary" onclick="showImage()">Ja — Bild anzeigen</button>
+  <div id="warn" class="center">
+    <div class="card">
+      <h1>⚠️ Trigger-Warnung</h1>
+      <p>Das folgende Bild zeigt möglicherweise verstörende Inhalte (Leichen sichtbar).<br>
+      Möchtest du es wirklich sehen?</p>
+      <div>
+        <button class="btn-danger" onclick="closePage()">Nein — Seite schließen</button>
+        <button class="btn-primary" onclick="showImage()">Ja — Bild anzeigen</button>
+      </div>
     </div>
-    <div id="imageSection" style="display:none">
-      <img src="https://i.ibb.co/gLXrKdv2/IMG-5607.jpg" alt="Sensibles Bildmaterial">
-    </div>
+  </div>
+
+  <div id="imageFull">
+    <img src="https://i.ibb.co/gLXrKdv2/IMG-5607.jpg" alt="Sensibles Bildmaterial">
   </div>
 
 <script>
@@ -34,7 +74,8 @@ function closePage(){
   window.location.href="about:blank";
 }
 function showImage(){
-  document.getElementById("imageSection").style.display="block";
+  document.getElementById("warn").style.display="none";
+  document.getElementById("imageFull").style.display="block";
 }
 </script>
 </body>
